# BBoyBattleManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
B3M/: B3M.sln
B3M/B3M_GUI/: B3M_GUI.cpp  B3M_GUI.h  B3M_GUI.qrc  B3M_GUI.ui  B3M_GUI.vcxproj  B3M_GUI.vcxproj.filters  main.cpp
B3M/B3M_SwissStyleTournament_Lib/: B3M_SwissStyleTournament_Lib.vcxproj  B3M_SwissStyleTournament_Lib.vcxproj.filters  MatchMaker.cpp  MatchMaker.hpp  Score.cpp  Score.hpp  SwissStyleMM.cpp  SwissStyleMM.hpp  SwissStyleTournamentLibrary.h  Team.cpp  Team.hpp  Tournament.cpp  Tournament.hpp  TypesAndAliases.hpp  sst_functions.cpp  sst_functions.h  utility.hpp
B3M/B3M_Testing/: B3M_Testing.cpp  B3M_Testing.vcxproj  B3M_Testing.vcxproj.filters
B3M_BBoyBattleManager/: CMakeLists.txt
B3M_Common/: CMakeLists.txt
B3M_Common/interfaces/: AttributeMap.ixx  B3M_Common.ixx  B3M_Participant.ixx  Participant.ixx  Tournament.ixx  Types.ixx
B3M_Common/src/: B3M_Participant.cpp  Participant.cpp  Tournament.cpp  Types.cpp
B3M_Common/tests/: AttributeMap_UnitTests.cpp  B3M_Participant_UnitTest.cpp  Participant_UnitTest.cpp  Tournament_UnitTests.cpp  Types_UnitTest.cpp
B3M_ConsoleApp/: CMakeLists.txt
B3M_ConsoleApp/src/: B3M_console_main.cpp
B3M_Database/: CMakeLists.txt  README.md
B3M_Database/interface/: B3M_Database.ixx  ParticipantsContainer.ixx  ParticipantsDepot.ixx  TeamsCollector.ixx  Tournament.ixx  TournamentProxy.ixx
B3M_Database/src/: ParticipantsContainer.cpp  ParticipantsDepot.cpp  TeamsCollector.cpp  Tournament.cpp  TournamentProxy.cpp
B3M_Database/tests/: ParticipantDepot_UnitTests.cpp  ParticipantsContainer_UnitTest.cpp  TeamsCollector_UnitTests.cpp  TournamentProxy_UnitTests.cpp  Tournament_UnitTests.cpp
B3M_Engine/: CMakeLists.txt  README.md
B3M_GUI/: BBoyBattleManager.cpp  CMakeLists.txt
B3M_GUI/src/: B3M_GUI_main.cpp  B3M_LandingPage.ui  B3M_MainWindow.cpp  B3M_MainWindow.hpp  B3M_MainWindow.ixx  B3M_MainWindow.ui  B3M_ParticipantsDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ParticipantsDialog.cpp  ParticipantsDialog.hpp  ParticipantsDialog.ui  PrepareTournamentDialog.cpp  PrepareTournamentDialog.hpp  TeamsView.cpp  TeamsView.hpp  TournamentManagementWindow.cpp  TournamentManagementWindow.ui
B3M_GUI/src/ExpressYourself2023/: DetailedRankingSlideSelector.cpp  DetailedRankingSlideSelector.hpp  EY2023.ixx  MatchSlideSelector.cpp  MatchSlideSelector.hpp  RankingSlideSelector.cpp  RankingSlideSelector.hpp  SlideTemplate.ui  SlidesStyle.cpp  SlidesStyle.ixx  StartupSlideSelector.cpp  StartupSlideSelector.hpp
B3M_GUI/src/Presentation/: CommonSlidesStyle.cpp  CommonSlidesStyle.ixx  ManagementWindow.cpp  ManagementWindow.hpp  Presentation.ixx  PresentationManagementWindow.ui  SlideSelector.cpp  SlideSelector.hpp
B3M_GUI/src/TournamentManagement/: MatchResultDialog.cpp  MatchResultDialog.hpp  MatchResultDialog.ui  TeamMatchResultInput.ui  TournamentManagementWindow.cpp  TournamentManagementWindow.hpp  TournamentManagementWindow.ui  TournamentRoundWidget.cpp  TournamentRoundWidget.hpp  TournamentRoundWidget.ui  Window.cpp  Window.hpp
B3M_GUI/src/Utility/: WidgetVerticalList.ui
B3M_Logic/: CMakeLists.txt
B3M_Logic/interface/: B3M_Logic.ixx  MatchMaker.ixx  MatchMakingUtility.ixx
B3M_Logic/src/: MatchMaker.cpp  MatchMakingUtility.cpp
B3M_Logic/tests/: MatchMaker_UnitTests.cpp  MatchMakingUtility_UnitTests.cpp
Documentation/: 2022_01_08-brainstorming-UI_Layout.md
EY2023/: ey2023_presentation.qrc
Utility/: CMakeLists.txt
Utility/interfaces/: Utility.ixx  integer.ixx  type_traits.ixx
Utility/tests/: integer_UnitTests.cpp
cmake/: CMakePresets.json
